# py-admin

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  55400133d6d6_add_status_to_users.py  850e63d27a1b_create_users_table.py
app/: main.py
app/api/: router.py
app/api/routes/: auth_routes.py  system_routes.py  user_routes.py
app/core/: config.py  exceptions.py  logger.py  openapi.py  response.py  security.py  time.py
app/db/: base.py  mixins.py  session.py
app/dependencies/: auth.py  config.py
app/middlewares/: auth_middleware.py  request_log_middleware.py
app/models/: __init__.py  user.py
app/schemas/: auth_schema.py  response_schema.py  system_schema.py  user_schema.py
app/services/: auth_service.py  user_service.py
docs/: module-development-guide.md
tests/: conftest.py  test_app.py
